--- a/silver/a.ipynb
+++ b/silver/a.ipynb
@@ -2,16 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n",
-      "9\n",
-      "1\n"
+      "0\n",
+      "1\n",
+      "0\n",
+      "2\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "8\n"
      ]
     }
    ],
@@ -19,43 +25,35 @@
     "n,m = map(int,input().split())\n",
     "arr = list(map(int,input().split()))\n",
     "\n",
-    "sum_arr = list(0 for i in range(n+1))\n",
-    "\n",
+    "result = 0\n",
     "for i in range(n):\n",
-    "    sum_arr[i+1] = sum_arr[i] + arr[i]\n",
-    "for i in range(m):\n",
-    "    a,b = map(int,input().split())\n",
-    "    print(sum_arr[b] - sum_arr[a-1])\n",
+    "    for j in range(i,n):\n",
+    "        if sum(arr[i:j])//3 == 0:\n",
+    "            print(sum(arr[i:j]))\n",
+    "            result += 1\n",
+    "\n",
+    "print(result)\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a,b,c,d,e = li"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "range(1, 3)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a"
+    "range(1,3)"
    ]
   },
   {
