--- a/silver/a.ipynb
+++ b/silver/a.ipynb
@@ -58,6 +58,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "empty separator",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m arr \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mmap\u001b[39m(\u001b[39mstr\u001b[39m,\u001b[39minput\u001b[39m()\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m'\u001b[39m)))\n\u001b[1;32m      2\u001b[0m \u001b[39mprint\u001b[39m(arr)\n",
+      "\u001b[0;31mValueError\u001b[0m: empty separator"
+     ]
+    }
+   ],
+   "source": [
+    "arr = list(map(str,input().split('')))\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'seungjaehwang'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m n,m \u001b[39m=\u001b[39m \u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m,\u001b[39minput\u001b[39m()\u001b[39m.\u001b[39msplit())\n\u001b[1;32m      2\u001b[0m arr \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m,\u001b[39minput\u001b[39m()\u001b[39m.\u001b[39msplit()))\n\u001b[1;32m      4\u001b[0m result \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'seungjaehwang'"
+     ]
+    }
+   ],
+   "source": [
+    "n,m = map(int,input().split())\n",
+    "arr = list(map(int,input().split()))\n",
+    "\n",
+    "result = 0\n",
+    "for i in range(n):\n",
+    "    for j in range(n):\n",
+    "        if sum(arr[i:j]) == 0:\n",
+    "            result += 1\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "name = input().strip()\n",
+    "n = int(input())\n",
+    "\n",
+    "for i in range(n):\n",
+    "    arr = input().split()\n",
+    "    score = 0\n",
+    "    for j in range(int(arr[1]),int(arr[2]) + 1):\n",
+    "        if str[j] == arr[0]:\n",
+    "            score += 1\n",
+    "    print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 's', 'd', 'f']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "name = input().strip()\n",
+    "n = int(input())\n",
+    "for i in range(n):\n",
+    "    a = input().split()\n",
+    "    sum = 0\n",
+    "    for j in range(int(a[1]), int(a[2]) + 1):\n",
+    "        if name[j] == a[0]:\n",
+    "            sum += 1\n",
+    "    print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
