--- a/silver/a.ipynb
+++ b/silver/a.ipynb
@@ -51,22 +51,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 0]"
+       "[2, 3]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr[2]"
+    "arr = [1,2,3]\n",
+    "arr[1:]"
    ]
   },
   {
